feat: add function filter in script js to show  result from user input

--- a/index.html
+++ b/index.html
@@ -1,15 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="style.css">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="stylesheet" href="style.css" />
+  <title>Rick and Morty Characters</title>
 </head>
 <body>
-    <div id="container">
+  <h1>Rick And Morty</h1>
+  <input type="text" id="search" placeholder="Masukkan nama karakter..." />
+  <div id="container"></div>
 
-    </div>
-    <script src="script.js"></script>
+  <script src="script.js"></script>
 </body>
 </html>
